# er-client

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.MD  README.md  development.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.cursor/plans/: purely_async_er2er_f2b9c60a.plan.md
.github/: CODEOWNERS
.github/scripts/: check_version_matches_tag.py
.github/workflows/: publish.yml  tests.yml
dasclient/: agol_tools.py  das_agol_tools.py  dasclient.py  dascsvloader.py  dasgpxconverter.py  schemas.py  version.py
docs/: AGENT_LEARNINGS.md
docs/examples/: simple-example.py
erclient/: __init__.py  agol_tools.py  api_paths.py  client.py  dascsvloader.py  dasgpxconverter.py  er_errors.py  erclient.py  schemas.py  version.py
tests/: test_api_paths.py
tests/async_client/: conftest.py  test_accounts.py  test_add_subjects_to_subjectgroup.py  test_alerts.py  test_alerts_notifications.py  test_analyzers_choices_gear_reports.py  test_delete_event_type.py  test_delete_message.py  test_event_helpers.py  test_event_subresources.py  test_eventproviders.py  test_geojson_kml_tiles.py  test_get_event.py  test_get_event_type_schema.py  test_get_event_types.py  test_get_events.py  test_get_events_export.py  test_get_message.py  test_get_messages.py  test_get_observations.py  test_get_source_assignments.py  test_get_source_by_manufacturer_id.py  test_get_source_subjects.py  test_get_sources.py  test_get_subject_tracks.py  test_get_subjects.py  test_gpx_upload.py  test_mapping_spatial.py  test_notification_methods.py  test_patch_report.py  test_patch_subject.py  test_patrols.py  test_post_attachment.py  test_post_camera_trap_report.py  test_post_message.py  test_post_observation.py  test_post_report.py  test_post_sensor_observation.py  test_retry_after.py  test_service_root_normalization.py  (+3 more)
tests/sync_client/: __init__.py  conftest.py  test_accounts.py  test_add_subjects_to_subjectgroup.py  test_alerts.py  test_alerts_notifications.py  test_analyzers_choices_gear_reports.py  test_api_versions.py  test_delete_event_type.py  test_delete_message.py  test_event_subresources.py  test_eventproviders.py  test_geojson_kml_tiles.py  test_get_event.py  test_get_events_export.py  test_get_message.py  test_get_messages.py  test_get_subject_tracks.py  test_gpx_upload.py  test_mapping_spatial.py  test_notification_methods.py  test_patrols.py  test_post_message.py  test_service_root_normalization.py  test_subject_source_write.py  test_task_status.py  test_v2_schemas.py
