[metadata]
name = er-client
version = attr: erclient.version.__version__
description = Client for ER API
readme = README.md
author = EarthRanger
author_email = integrations@earthranger.com
license = 
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3

keywords = api
url = http://github.com/PADAS/er-client


[options]
install_requires = requests
    dateparser
    gpxpy
    pydantic
    pytz
    importlib-metadata; python_version<"3.8"

python_requires = >=3.7



[options.extras_require]
dev = pre-commit
     bumpver
     pip-tools
