[metadata]
name = er-client
version = attr: erclient.version.__version__
description = Client for ER API
long_description = file: README.MD
long_description_content_type = text/markdown
readme = README.MD
author = EarthRanger
author_email = integrations@earthranger.com
license = LICENSE
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3

keywords = api EarthRanger
url = http://github.com/PADAS/er-client


[options]
install_requires = 
    requests >= 2.28.0
    dateparser >= 1.1.1
    gpxpy >= 1.5.0
    pydantic >= 1.9.1
    pytz >= 2022.1
    importlib-metadata; python_version<"3.8"

python_requires = >=3.7



[options.extras_require]
dev = pre-commit
     bumpver
     pip-tools
