[metadata]
name = earthranger-client
version = attr: erclient.version.__version__
description = Client for EarthRanger API
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
author = EarthRanger
author_email = integrations@earthranger.com
license = Apache License 2.0
license_file = LICENSE
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

keywords = api EarthRanger
url = http://github.com/PADAS/er-client


[options]
install_requires = 
    requests >= 2.28.0
    httpx >= 0.23.3
    dateparser >= 1.1.1
    gpxpy >= 1.5.0
    pydantic ~= 1.8.2
    pytz >= 2021.1
    importlib-metadata; python_version<"3.8"

python_requires = >=3.7



[options.extras_require]
dev = pre-commit
     bumpver
     pip-tools

test =
    pytest
    pytest-asyncio
    respx
